# mistral-hackaton

./: .env.example  .gitignore  docker-compose.override.yml  init.sh  main.py  main_old.py  pyproject.toml  readme.md
nginx/: nginx.conf
ressources/: readme.md
services/: response
services/carbon/: carbon_analyzer.py
services/carbon_calculator/: Dockerfile  init.sql
services/carbon_calculator/python_api/: requirements.txt
services/codeclimate/: json_errors.py
services/codeclimate/api/: client.py  package.json
services/dependency-track/: docker-compose.yml  nginx.conf
services/git_analyzer/analyzer/: requirements.txt
services/github/: main.py  prompt  prompt_searcher_prompt
services/sonarqube/: bad_code.py  docker-compose.yml  sonar.py  sonar_analyzer.py
src/: main.py  server.py
src/core/: mcp_handler.py  metrics.py  optimizer.py
src/services/: dependency_track_client.py  github_client.py  search_client.py  sonarqube_client.py
