[project]
name = "mcp-server-template"
version = "0.1.0"
description = "Python MCP Server template"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Alpic" }]
keywords = ["mcp", "llm", "alpic", "python"]
dependencies = [
    "asyncssh>=2.21.0",
    "black>=25.1.0",
    "codecarbon>=3.0.4",
    "gitpython>=3.1.45",
    "mcp",
    "pandas>=2.3.2",
]
